@@ -78,6 +78,11 @@ public class CashSettlementService {
     // Commission split: 20% to admin (platform), 80% to vendor
     public static final double ADMIN_COMMISSION_RATE = 0.20;
     public static final double VENDOR_SHARE_RATE = 0.80;
+    
+    // Settlement status constants
+    private static final String STATUS_SUBMITTED = "SUBMITTED";
+    private static final String STATUS_APPROVED = "APPROVED";
+    private static final String APPROVED_AT_KEY = "approvedAt";
 
 
     // ─────────────────────────────────────────────────────────────────────────
@@ -147,7 +152,7 @@ public class CashSettlementService {
         settlement.setWarehouseId(warehouseId);
         settlement.setSubmittedByStaffId(submittedByStaffId);
         settlement.setSubmittedAt(LocalDateTime.now());
-        settlement.setSettlementStatus("SUBMITTED");  // Awaiting admin approval
+        settlement.setSettlementStatus(STATUS_SUBMITTED);  // Awaiting admin approval
         settlement.setTotalCashCollected(totalCashCollected);
         settlement.setAdminCommission(adminCommission);
         settlement.setVendorShare(vendorShare);
@@ -169,7 +174,7 @@ public class CashSettlementService {
         }
 
         // Log event
-        logSettlementEvent(settlement, "Settlement batch submitted",
+        logSettlementEvent("Settlement batch submitted",
             "Warehouse staff submitted " + orderIds.size() + " orders. Total: ₹" + totalCashCollected +
             " (Admin: ₹" + adminCommission + ", Vendor: ₹" + vendorShare + ")");
 
@@ -196,13 +201,13 @@ public class CashSettlementService {
             throw new IllegalArgumentException("Settlement not found: " + settlementId);
         }
 
-        if (!settlement.getSettlementStatus().equals("SUBMITTED")) {
+        if (!settlement.getSettlementStatus().equals(STATUS_SUBMITTED)) {
             throw new IllegalStateException("Settlement " + settlementId + " status is " +
                     settlement.getSettlementStatus() + ", expected SUBMITTED");
         }
 
         // Mark as approved
-        settlement.setSettlementStatus("APPROVED");
+        settlement.setSettlementStatus(STATUS_APPROVED);
         settlement.setApprovedAt(LocalDateTime.now());
         settlement.setApprovedByAdminId(approvedByAdminId);
         settlement = cashSettlementRepository.save(settlement);
@@ -211,12 +216,12 @@ public class CashSettlementService {
         List<SettlementOrderMapping> mappings = settlementOrderMappingRepository.findBySettlementId(settlementId);
         List<Integer> orderIds = mappings.stream()
                 .map(SettlementOrderMapping::getOrderId)
-                .collect(Collectors.toList());
+                .toList();
 
         codPaymentService.markOrdersAsSettled(settlementId, orderIds);
 
         // Log event
-        logSettlementEvent(settlement, "Settlement approved",
+        logSettlementEvent("Settlement approved",
             "Admin approved settlement. Admin commission: ₹" + settlement.getAdminCommission() +
             ". Vendor share: ₹" + settlement.getVendorShare() + ". " +
             (approvalNotes != null ? approvalNotes : ""));
@@ -239,7 +244,7 @@ public class CashSettlementService {
             throw new IllegalArgumentException("Settlement not found: " + settlementId);
         }
 
-        if (!settlement.getSettlementStatus().equals("SUBMITTED")) {
+        if (!settlement.getSettlementStatus().equals(STATUS_SUBMITTED)) {
             throw new IllegalStateException("Can only reject SUBMITTED settlements");
         }
 
@@ -249,7 +254,7 @@ public class CashSettlementService {
 
         settlement = cashSettlementRepository.save(settlement);
 
-        logSettlementEvent(settlement, "Settlement rejected",
+        logSettlementEvent("Settlement rejected",
             "Admin rejected settlement. Reason: " + rejectionReason);
 
         return settlement;
@@ -265,7 +270,7 @@ public class CashSettlementService {
      * @return List of settlements with status=SUBMITTED
      */
     public List<CashSettlement> getPendingSettlements() {
-        return cashSettlementRepository.findBySettlementStatus("SUBMITTED");
+        return cashSettlementRepository.findBySettlementStatus(STATUS_SUBMITTED);
     }
 
     /**
@@ -274,7 +279,7 @@ public class CashSettlementService {
      * @return List of settlements with status=APPROVED
      */
     public List<CashSettlement> getApprovedSettlements() {
-        return cashSettlementRepository.findBySettlementStatus("APPROVED");
+        return cashSettlementRepository.findBySettlementStatus(STATUS_APPROVED);
     }
 
     /**
@@ -306,7 +311,7 @@ public class CashSettlementService {
     public Map<String, Object> getSettlementDetails(int settlementId) {
         CashSettlement settlement = cashSettlementRepository.findById(settlementId).orElse(null);
         if (settlement == null) {
-            return null;
+            return new LinkedHashMap<>();
         }
 
         Map<String, Object> details = new LinkedHashMap<>();
@@ -316,7 +321,7 @@ public class CashSettlementService {
         details.put("warehouseId", settlement.getWarehouseId());
         details.put("status", settlement.getSettlementStatus());
         details.put("submittedAt", settlement.getSubmittedAt());
-        details.put("approvedAt", settlement.getApprovedAt());
+        details.put(APPROVED_AT_KEY, settlement.getApprovedAt());
         details.put("totalCashCollected", settlement.getTotalCashCollected());
         details.put("adminCommission", settlement.getAdminCommission());
         details.put("vendorShare", settlement.getVendorShare());
@@ -363,7 +368,7 @@ public class CashSettlementService {
 
         for (Integer settlementId : settlementIds) {
             CashSettlement settlement = cashSettlementRepository.findById(settlementId).orElse(null);
-            if (settlement != null && "APPROVED".equals(settlement.getSettlementStatus())) {
+            if (settlement != null && STATUS_APPROVED.equals(settlement.getSettlementStatus())) {
                 // Calculate this vendor's share in this settlement
                 double vendorAmount = mappings.stream()
                         .filter(m -> m.getSettlementId() == settlementId && m.getVendorId() == vendorId)
@@ -375,7 +380,7 @@ public class CashSettlementService {
 
                 Map<String, Object> settlementRecord = new LinkedHashMap<>();
                 settlementRecord.put("settlementId", settlementId);
-                settlementRecord.put("approvedAt", settlement.getApprovedAt());
+                settlementRecord.put(APPROVED_AT_KEY, settlement.getApprovedAt());
                 settlementRecord.put("vendorCollected", vendorAmount);
                 settlementRecord.put("adminCommission", vendorAmount * ADMIN_COMMISSION_RATE);
                 settlementRecord.put("vendorPayout", vendorPayout);
@@ -389,8 +394,8 @@ public class CashSettlementService {
 
         // Sort by approval date (newest first)
         history.sort((a, b) -> {
-            LocalDateTime aTime = (LocalDateTime) a.get("approvedAt");
-            LocalDateTime bTime = (LocalDateTime) b.get("approvedAt");
+            LocalDateTime aTime = (LocalDateTime) a.get(APPROVED_AT_KEY);
+            LocalDateTime bTime = (LocalDateTime) b.get(APPROVED_AT_KEY);
             return bTime.compareTo(aTime);
         });
 
@@ -447,11 +452,10 @@ public class CashSettlementService {
     /**
      * Logs a settlement-related event to TrackingEventLog.
      *
-     * @param settlement Settlement
      * @param eventTitle Event title
      * @param eventDescription Event description
      */
-    private void logSettlementEvent(CashSettlement settlement, String eventTitle, String eventDescription) {
+    private void logSettlementEvent(String eventTitle, String eventDescription) {
         try {
             // Log to CashSettlement audit trail (future: add settlement_audit_log table)
             log.info("[SETTLEMENT] {}: {}", eventTitle, eventDescription);
